--- a/application-common-dev.yml
+++ b/application-common-dev.yml
@@ -6,3 +6,7 @@ server:
 spring:
   application:
     name: common-service
+  data:
+    elasticsearch:
+      cluster-name: elasticsearch
+      cluster-nodes: 127.0.0.1:9300
