--- a/application-common-dev.yml
+++ b/application-common-dev.yml
@@ -9,4 +9,4 @@ spring:
   data:
     elasticsearch:
       cluster-name: elasticsearch
-      cluster-nodes: 127.0.0.1:9300
+      cluster-nodes: 127.0.0.1:9300 #9200是图形界面端,9300代码端
